# suricasta-rules

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  build.rs
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs  paths.rs  rulesets.rs  sources.rs  update.rs  user_agent.rs
